fixed navbar in dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,20 @@
 {
     color: #eeeeee;
 }
+.dark-mode .nav-link
+{
+    color: #eeeeee !important;
+}
+.dark-mode .navbar-brand
+{
+    color: #eeeeee;
+}
+.dark-mode .custom-toggler
+{
+    border-color: #eeeeee;
+    background-image: url( 
+"data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
 /* DARK MODE CSS ENDS */
 
 body
@@ -104,7 +118,7 @@ span
 {
     background-color:#e4f9f5;
     position: relative;
-    padding:2rem 0;
+    padding-top: 2rem;
     margin-top:3rem;
 }
 .top-cloud
